--- a/notebook_json.ipynb
+++ b/notebook_json.ipynb
@@ -72,7 +72,7 @@
     "    users = []\n",
     "    for entry in data :\n",
     "        users.append(entry.split(\";\")[1])\n",
-    "    return users\n",
+    "    return list(set(users))\n",
     "\n",
     "myUsers = retrieve_users(myConnexions)\n",
     "print(myUsers)\n"
